<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculadoraActivity">

    <TextView
        android:id="@+id/tv_calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calculadora"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/layout_campos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_calculadora"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_campo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/et_campoMeio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_campo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/et_campoIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_campo_igual"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_acoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_campos"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- botao menos -->
            <Button
                android:id="@+id/bt_menos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_menos"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- botao mais -->
            <Button
                android:id="@+id/bt_mais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_mais"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- botao vezes -->
            <Button
                android:id="@+id/bt_vezes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_vezes"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- botao dividir -->
            <Button
                android:id="@+id/bt_dividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_dividir"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_acoes"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_calcular"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>
